tests/snapshots/snapshot__type_errors@undefined_variable.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/undefined_variable.roto
---
Error: Type error: cannot find value `b` in this scope
   ╭─[ tests/scripts/type_errors/undefined_variable.roto:2:10 ]
   │
 2 │     let a = b;
   │             ┬  
   │             ╰── not found in this scope
───╯
